--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
-    "@prettier/plugin-pug": "^1.13.5"
+    "@prettier/plugin-pug": "^1.13.5",
+    "fancy-log": "^1.3.3"
   },
   "devDependencies": {
     "browser-sync": "^2.26.14",
